# crab

./: .gitignore  .jscpd.json  AGENTS.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PHILOSOPHY.md  README.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  task.yml
.github/workflows/: quality.yml
crab/: DESIGN.md  WORKSTREAMS.md
crab/config/: crab.env.example
crab/docs/: 01-initial-turn-and-onboarding.md  02-sessions-lanes-and-turn-lifecycle.md  03-rotation-checkpoint-and-compaction.md  04-memory-model-and-context.md  05-reliability-delivery-and-recovery.md  06-backend-contract-and-inference-profiles.md  07-storage-and-state-model.md  08-deployment-readiness-gaps.md  09-discord-provisioning-and-secrets.md  10-target-machine-operations.md  11-feature-integration-matrix.md  12-snapshot-restore-design-note.md  13-deployment-acceptance-evidence.md  14-overall-chat-flow-2026-02-12.md  15-self-trigger.md  README.md
crates/crab-app/: Cargo.toml
crates/crab-app/src/: cli_support.rs  composition.rs  daemon.rs  daemon_backend_bridge.rs  installer.rs  lib.rs  maintenance.rs  memory_cli.rs  rotate_cli.rs  self_work_cli.rs  startup.rs  test_support.rs  trigger_cli.rs  turn_executor.rs
crates/crab-app/tests/: bin_entrypoints.rs  self_work_cli_public.rs
crates/crab-app/tests/support/: mod.rs
crates/crab-backends/: Cargo.toml
crates/crab-backends/src/: claude.rs  codex.rs  codex_events.rs  codex_protocol.rs  codex_recovery.rs  codex_unattended.rs  lib.rs  opencode.rs  opencode_events.rs  opencode_protocol.rs  opencode_recovery.rs  profile_mapping.rs
crates/crab-core/: Cargo.toml
crates/crab-core/src/: checkpoint_fallback.rs  checkpoint_turn.rs  compatibility.rs  config.rs  context_assembly.rs  context_budget.rs  context_diagnostics.rs  diagnostics.rs  domain.rs  error.rs  fallback.rs  file_signal.rs  heartbeat.rs  lib.rs  memory_citation.rs  memory_flush.rs  memory_get.rs  memory_search.rs  memory_snippets.rs  onboarding.rs  onboarding_completion.rs  onboarding_profile_files.rs  onboarding_state.rs  operator_commands.rs  pending_rotation.rs  profile.rs  prompt_contract.rs  rotation.rs  rotation_sequence.rs  self_trigger.rs  self_work.rs  sender_identity.rs  startup_reconciliation.rs  state_file_support.rs  state_schema.rs  test_support.rs  trust.rs  validation.rs  workspace.rs  workspace_git.rs
crates/crab-core/tests/: memory_flush_recall_continuity.rs  smoke.rs
crates/crab-discord/: Cargo.toml
crates/crab-discord-connector/: Cargo.toml
crates/crab-discord-connector/src/: main.rs
crates/crab-discord/src/: lib.rs  runtime_adapter.rs
crates/crab-scheduler/: Cargo.toml
crates/crab-scheduler/src/: lib.rs
crates/crab-store/: Cargo.toml
crates/crab-store/src/: checkpoint_store.rs  event_store.rs  helpers.rs  lib.rs  outbound_store.rs  run_store.rs  session_store.rs  test_support.rs
crates/crab-telemetry/: Cargo.toml
crates/crab-telemetry/src/: lib.rs
design/: graceful-steering-batching.md
gemini-image-gen/: index.ts
notes/: graceful-steering-plan.md  steering-message-wrapping-plan.md
scripts/: collect_quality_baseline.sh  coverage_diagnostics.sh  coverage_gate.sh  duplication_check.sh  gen_code_quality_report.sh  public_api_usage_check.sh  quality.sh
