[workspace]
members = ["crates/crab-core"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
license = "MIT"

[workspace.lints.rust]
warnings = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "deny"
