[workspace]
members = [
    "crates/crab-core",
    "crates/crab-telemetry",
    "crates/crab-store",
    "crates/crab-scheduler",
    "crates/crab-discord",
    "crates/crab-discord-connector",
    "crates/crab-backends",
    "crates/crab-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
license = "MIT"

[workspace.lints.rust]
warnings = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
all = "deny"
