[package]
name = "crab-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crab-core = { path = "../crab-core" }
crab-telemetry = { path = "../crab-telemetry" }
crab-backends = { path = "../crab-backends" }
crab-discord = { path = "../crab-discord" }
crab-scheduler = { path = "../crab-scheduler" }
crab-store = { path = "../crab-store" }
ctrlc = "3.4.5"
futures = "0.3.31"
serde_json = "1.0.139"
tracing = "0.1.41"

[lints]
workspace = true
