[package]
name = "crab-discord"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crab-core = { path = "../crab-core" }
crab-store = { path = "../crab-store" }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"

[lints]
workspace = true
